updated page structure

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -42,10 +42,10 @@
 }
  *{
   background-color: rgb(255, 255, 255);
- }
+ } */
 
 body {
-  background-color: #f1f1f1;
+  background-color: #f8f8f8;
 }
 .container {
   display: flex;
