--- a/src/pages/LogInPage.css
+++ b/src/pages/LogInPage.css
@@ -1,54 +1,67 @@
-.logIn-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 100vh;
-  }
-  .logIn-div {
-    width: 400px;
-    padding: 30px;
-    background-color: #f2f2f2;
-    border-radius: 5px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  .logIn-div h1 {
-    margin-bottom: 20px;
-    color: #333;
-  }
-  .logIn-div .input-wrapper {
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+}
+
+.form-container {
+  width: 40%;
+  padding: 40px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.image-container {
+  width: 50%;
+}
+
+h1 {
+  margin-bottom: 20px;
+  color: #333;
+}
+  .input-wrapper {
     margin-bottom: 15px;
     text-align: left;
   }
-  .logIn-div .input-wrapper label {
+  .input-wrapper label {
     display: block;
     margin-bottom: 5px;
     color: #333;
   }
-  .logIn-div input {
-    width: 100%;
+  input {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 3px;
   }
-  .logIn-div button {
+  button {
     width: 100%;
     padding: 10px;
     margin-top: 10px;
-    background-color: #003d29;
+    font-size: 18px;
+    background-color: #003D29;
     color: #fff;
     border: none;
-    border-radius: 3px;
+    border-radius: 8px;
     cursor: pointer;
   }
-  .logIn-div button:hover {
-    background-color: #003d29;
+  button:hover {
+    background-color: #f8f8f8;
+    color: #003D29;
+    border: 2px solid #003D29;
   }
-  .logIn-div p {
+   p {
     margin-top: 20px;
   }
-  .logIn-div p a {
+  a {
     color: #333;
+    text-decoration: none;
+  }
+
+  a:hover {
     text-decoration: underline;
   }
   .toastify-container {
@@ -57,16 +70,7 @@
   .toastify-content {
     font-size: 14px;
   }
-  .ellipse-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    width: 50%;
-  }
+
   .ellipse-image {
     height: 100%;
     object-fit: cover;
