--- a/src/pages/SignUpPage.css
+++ b/src/pages/SignUpPage.css
@@ -1,40 +1,63 @@
 .signup-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
+    min-height: 100vh;
+  }
+
+  .form-container {
+    width: 60%;
+    padding: 40px;
+    background-color: #f8f8f8;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+
+
+  .image-container {
+    width: 50%;
     height: 100vh;
   }
-  .signup-div {
-    width: 400px;
-    padding: 30px;
-    background-color: #F2F2F2;
-    border-radius: 5px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  .signup-div h1 {
-    margin-bottom: 20px;
-    color: #333;
-  }
-  .input-wrapper {
-    margin-bottom: 15px;
-    text-align: left;
-  }
-  .input-wrapper label {
-    display: block;
-    margin-bottom: 5px;
-    color: #333;
-  }
-  .input-wrapper input {
+
+  .ellipse-image {
     width: 100%;
-    padding: 8px;
+    height: auto;
+  }
+
+  form {
+    flex: 1;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 8px 5px;
+    margin: 0 auto;
     border: 1px solid #ccc;
-    border-radius: 3px;
+    border-radius: 5px;
+    overflow: hidden;
+    border: 2px solid #003D29;
+  }
+  
+  .input-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+  label {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+  input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
   }
   button {
     width: 100%;
     padding: 10px;
     margin-top: 10px;
+    font-size: 18px;
     background-color: #003D29;
     color: #fff;
     border: none;
@@ -42,32 +65,26 @@
     cursor: pointer;
   }
   button:hover {
-    background-color: #003D29;
+    background-color: #f8f8f8;
+    color: #003D29;
+    border: 2px solid #003D29;
   }
   p {
+    font-size: 14px;
     margin-top: 20px;
   }
   p a {
     color: #333;
+    text-decoration: none;
+  }
+
+  a:hover {
     text-decoration: underline;
   }
+
   .toastify-container {
     font-family: 'Roboto', sans-serif;
   }
   .toastify-content {
     font-size: 14px;
-  }
-  .ellipse-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    width: 50%;
-  }
-  .ellipse-image {
-    height: 100%;
-    object-fit: cover;
   }
