--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -26,7 +26,7 @@
     margin-bottom: 10px;
     flex: 1;
     text-align: left;
-    line-height: 0;
+    line-height: 1;
   }
   
   
@@ -98,11 +98,11 @@
   position: absolute;
   bottom: 0%;
   right: 0%;
-  margin: 10px;
+  margin-left: 35px;
   font-size: medium;
   cursor: pointer;
   padding: 10px;
-  transition: transform 0.2s ease; 
+  transition: transform 0.1s ease; 
 }
 
 .add-to-cart-button:hover {
@@ -112,7 +112,7 @@
 
 
 .add-to-cart-button:active {
-  transform: scale(1.9); 
+  transform: scale(1.2); 
 }
 
  
