--- a/src/components/deliveries/deliveriesPage.css
+++ b/src/components/deliveries/deliveriesPage.css
@@ -17,6 +17,17 @@
     border-radius: 5px;
     overflow: hidden;
   }
+
+  .product-view-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    max-width: 60%;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+  }
   
   .image-gallery {
     display: flex;
