Working on cleaning up code

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
   background-color: rgb(255, 255, 255);
  } */
 
-body {
+/* body {
   background-color: #f8f8f8;
 }
 .container {
@@ -52,5 +52,5 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-}
+} */
 
