--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -56,13 +56,20 @@
   }
  
   .image-container {
-    background-image: url('../../public/background-img.jpg');
+    background-image: url("background-img.jpg");
     background-color: #cccccc;
-    height: 100vh;
+    color: #fff;
+    width: 100%;
+    height: 500px;
     min-height: 800px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     position: relative;
     overflow: hidden;
 }
@@ -75,8 +82,6 @@
     align-items: flex-start; 
     height: 100%;
     top: 300px; 
-    /* left: 20px */
-    /* text-align: center; */
 
 }
 
