--- a/src/components/deliveries/deliveriesPage.css
+++ b/src/components/deliveries/deliveriesPage.css
@@ -1,95 +1,96 @@
-
   .deliveries_page {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     gap: 20px;
+    justify-content: center;
   }
 
 
 
-  .product-container {
+  .deliveries-product-container {
     flex: 1;
     display: flex;
     flex-direction: column;
     max-width: 40%;
+    height: 100%;
     margin: 0 auto;
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
   }
-  
-  .image-gallery {
+
+  .deliveries-image-gallery {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
   }
-  
-  .main-image img {
+
+  .deliveries-main-image img {
     width: 100%;
     height: auto;
   }
-  
-  .thumbnail-images {
+
+  .deliveries-thumbnail-images {
     display: flex;
     gap: 10px;
   }
-  
-  .thumbnail-images img {
+
+  .deliveries-thumbnail-images img {
     width: 80px;
     height: 80px;
   }
-  
-  .product-details {
+
+  .deliveries-product-details {
     padding: 20px;
   }
-  
-  .product-name {
+
+  .deliveries-product-name {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 5px;
   }
-  
-  .product-brand {
+
+  .deliveries-product-brand {
     font-size: 18px;
     margin-bottom: 10px;
   }
-  
-  .quantity-setting {
+
+  .deliveries-quantity-setting {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
   }
-  
-  .quantity-setting h3 {
+
+  .deliveries-quantity-setting h3 {
     margin-right: 10px;
   }
-  
-  .add-or-reduce-quantity {
+
+  .deliveries-add-or-reduce-quantity {
     display: flex;
     align-items: center;
   }
-  
-  .add-or-reduce-quantity button {
+
+  .deliveries-add-or-reduce-quantity button {
     font-size: 18px;
     padding: 5px 10px;
     border: 1px solid #ccc;
     background-color: #f0f0f0;
     cursor: pointer;
   }
-  
-  .add-or-reduce-quantity h5 {
+
+  .deliveries-add-or-reduce-quantity h5 {
     margin: 0 10px;
     font-size: 18px;
   }
-  
-  .product-price {
+
+  .deliveries-product-price {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
   }
-  
-  .details-toggle {
+
+  .deliveries-details-toggle {
     background-color: #003d29;
     color: #fff;
     font-size: 16px;
@@ -99,25 +100,25 @@
     cursor: pointer;
     margin-bottom: 20px;
   }
-  
-  .product-description {
+
+  .deliveries-product-description {
     padding: 20px;
     border-top: 1px solid #ccc;
   }
-  
-  .description-heading {
+
+  .deliveries-description-heading {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
   }
-  
-  .product-description p {
+
+  .deliveries-product-description p {
     font-size: 16px;
   }
 
    /* Step Progress Widget */
-  
- .mainContainer {
+
+ .deliveries-mainContainer {
     flex: 1;
     width: 100%;
     max-width: 40%;
@@ -129,14 +130,14 @@
     overflow: hidden;
 }
 
-.step-container {
+.deliveries-step-container {
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
     position: relative;
 }
 
-.step-container::before{
+.deliveries-step-container::before{
     content: '';
     position: absolute;
     background: #F5F6F6;
@@ -147,24 +148,24 @@
     left: 0;
 }
 
-.step-container::after{
+.deliveries-step-container::after{
     content: '';
     position: absolute;
     background: #003d29;
     height: 3px;
-    width: 50%;
+    width: calc((100% / 3) * var(--active-step));;
     top: 50%;
     transition: 0.4s ease;
     transform: translateY(-50%);
     left: 0;
 }
-  
-  .step-wrapper {
+
+  .deliveries-step-wrapper {
     position: relative;
     z-index: 1;
   }
-  
-  .step-style {
+
+  .deliveries-step-style {
     width: 30px;
     height: 30px;
     background-color: #fff;
@@ -176,34 +177,34 @@
     transition: 0.4s ease;
   }
 
-  .step-style.completed {
+  .deliveries-step-style.completed {
     border-color: #f0f0f0;
   }
-  
-  .step-count {
+
+  .deliveries-step-count {
     font-size: 19px;
     color: #003d29;
     @media (max-width: 600px) {
         font-size: 16px;
     }
   }
-  
-  .step-label-container {
+
+  .deliveries-step-label-container {
     position: absolute;
     top: 56px;
     left: 50%;
     transform: translate(-50%, -50%);
     border-bottom: 1px solid #ccc;
   }
-  
-  .step-label {
+
+  .deliveries-step-label {
     font-size: 19px;
     @media (max-width: 600px) {
         font-size: 16px;
     }
   }
 
-  .checkmark {
+  .deliveries-checkmark {
     font-size: 26px;
     font-weight: 600;
     /* color: #003d29;
@@ -212,59 +213,59 @@
     transform: scaleX(-1) rotate(-46deg); */
   }
 
-  .details {
+  .deliveries-details {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
   }
 
-  .contact_details, .shipping_details {
+  .deliveries-contact_details, .deliveries-shipping_details {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
 
-  .form-group {
+  .deliveries-form-group {
     display: flex;
     flex-direction: column;
   }
 
-  .form-group label {
+  .deliveries-form-group label {
     font-size: 16px;
     margin-bottom: 5px;
   }
 
-  .form-group input {
+  .deliveries-form-group input {
     padding: 6px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
   }
 
-  .form-group input[type="checkbox"] {
+  .deliveries-form-group input[type="checkbox"] {
     display: flex;
     position: absolute;
     margin-right: 5px;
   }
 
-  #for-check-box {
+  #deliveries-for-check-box {
     margin-left: 20px;
   }
 
-  .step-buttons-container {
+  .deliveries-step-buttons-container {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
   }
 
-  .proceed-button,
-.back-button {
+  .deliveries-proceed-button,
+.deliveries-back-button {
   flex: 1;
   margin-right: 10px;
 }
 
-  .proceed-button {
+  .deliveries-proceed-button {
     background-color: #003d29;
     color: #fff;
     font-size: 18px;
@@ -273,18 +274,18 @@
     border-radius: 5px;
     cursor: pointer;
   }
-  
-  .proceed-button:hover {
+
+  .deliveries-proceed-button:hover {
     background-color: #00271c;
   }
-  
-  .proceed-button:disabled {
+
+  .deliveries-proceed-button:disabled {
     background-color: #c0c0c0;
     cursor: not-allowed;
   }
 
 
-  .back-button {
+  .deliveries-back-button {
     background-color: #003d29;
     color: #fff;
     font-size: 18px;
@@ -293,16 +294,23 @@
     border-radius: 5px;
     cursor: pointer;
   }
-  
-  .back-button:hover {
+
+  .deliveries-back-button:hover {
     background-color: #00271c;
   }
-  
-  .back-buttonn:disabled {
+
+  .deliveries-back-button:disabled {
     background-color: #c0c0c0;
     cursor: not-allowed;
   }
 
-
-  
-  
+  @media (max-width: 768px) {
+    .deliveries_page {
+      gap: 10px;
+    }
+    
+    .product-container,
+    .mainContainer {
+      max-width: 100%;
+    }
+  }
