Corrected the file structure and commenced css refactoring

--- a/src/pages/SignUpPage.css
+++ b/src/pages/SignUpPage.css
@@ -5,7 +5,7 @@
     min-height: 100vh;
   }
 
-  .form-container {
+  .signup-form-container {
     width: 60%;
     padding: 40px;
     background-color: #f8f8f8;
@@ -14,17 +14,17 @@
   }
 
 
-  .image-container {
+  .signup-image-container {
     width: 50%;
     height: 100vh;
   }
 
-  .ellipse-image {
+  .signup-ellipse-image {
     width: 100%;
     height: auto;
   }
 
-  form {
+  .signup-form {
     flex: 1;
     width: 100%;
     max-width: 100%;
@@ -37,54 +37,45 @@
     border: 2px solid #003D29;
   }
   
-  .input-wrapper {
+  .signup-input-wrapper {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
   }
-  label {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 8px;
-  }
-  input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-  button {
-    width: 100%;
+
+ 
+  .signup-button {
+    width: 80%;
     padding: 10px;
     margin-top: 10px;
     font-size: 18px;
     background-color: #003D29;
     color: #fff;
     border: none;
-    border-radius: 3px;
+    border-radius: 8px;
     cursor: pointer;
   }
-  button:hover {
+  .signup-button:hover {
     background-color: #f8f8f8;
     color: #003D29;
     border: 2px solid #003D29;
   }
-  p {
+  .signup-to-login {
     font-size: 14px;
     margin-top: 20px;
   }
-  p a {
+  .signup-to-login a {
     color: #333;
     text-decoration: none;
   }
 
-  a:hover {
+  .signup-to-login a:hover {
     text-decoration: underline;
   }
 
-  .toastify-container {
+  /* .toastify-container {
     font-family: 'Roboto', sans-serif;
   }
   .toastify-content {
     font-size: 14px;
-  }
+  } */
