--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -1,4 +1,4 @@
-.update-container {
+/* .update-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,4 +46,4 @@
     border-radius: 10px;
     overflow: hidden;
     border: 2px solid #003D29;
-  }
+  } */
