--- a/src/pages/LogInPage.css
+++ b/src/pages/LogInPage.css
@@ -1,4 +1,3 @@
-
 .login-container {
   display: flex;
   justify-content: center;
@@ -7,76 +6,86 @@
   background-color: #f5f5f5;
 }
 
-.form-container {
-  width: 40%;
+.login-form-container {
+  width: 60%;
   padding: 40px;
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.image-container {
-  width: 50%;
+.login-form-container form {
+  flex: 1;
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 8px 5px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+  border: 2px solid #003d29;
 }
 
-h1 {
+.login-image-container {
+  width: 50%;
+  height: 100vh;
+}
+
+.login-form-container h1 {
   margin-bottom: 20px;
   color: #333;
 }
-  .input-wrapper {
-    margin-bottom: 15px;
-    text-align: left;
-  }
-  .input-wrapper label {
-    display: block;
-    margin-bottom: 5px;
-    color: #333;
-  }
-  input {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  button {
-    width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-    font-size: 18px;
-    background-color: #003D29;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: #f8f8f8;
-    color: #003D29;
-    border: 2px solid #003D29;
-  }
-   p {
-    margin-top: 20px;
-  }
-  a {
-    color: #333;
-    text-decoration: none;
-  }
+.login-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.login-input-wrapper label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+}
+.login-input-wrapper input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+.login-button {
+  width: 80%;
+  padding: 10px;
+  margin-top: 10px;
+  font-size: 18px;
+  background-color: #003d29;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.login-button:hover {
+  background-color: #f8f8f8;
+  color: #003d29;
+  border: 2px solid #003d29;
+}
+.login-form-container p {
+  margin-top: 20px;
+}
+.login-form-container p a {
+  color: #333;
+  text-decoration: none;
+}
 
-  a:hover {
-    text-decoration: underline;
-  }
-  .toastify-container {
+.login-form-container p a:hover {
+  text-decoration: underline;
+}
+/* .toastify-container {
     font-family: 'Roboto', sans-serif;
   }
   .toastify-content {
     font-size: 14px;
-  }
+  } */
 
-  .ellipse-image {
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  
-  
-  
-  
+.login-ellipse-image {
+  width: 100%;
+  height: auto;
+}
