Updated user profile css

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -1,11 +1,17 @@
-/* .update-container {
+.profile-page-update-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 400px;
   }
 
-.form-container {
+  .profile-page-heading {
+    display: flex;
+    position: absolute;
+    margin-right: 50px;
+  }
+
+.profile-page-form-container {
     width: 100%;
     padding: 40px;
     background-color: #f8f8f8;
@@ -13,30 +19,18 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
 
-  .profile-image{
+  .profile-page-profile-image{
     width: 100px;
     height: 100px;
     border-radius: 50%;
 }
-
-  .image-container {
-    width: 50%;
-    height: 100vh;
-  }
-  .input-wrapper {
+  .profile-page-input-wrapper {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
   }
 
-  .ellipse-image {
-    width: 100%;
-    height: auto;
-  }
-
-
-
-  form {
+  .profile-page-input-form {
     flex: 1;
     width: 60%;
     max-width: 100%;
@@ -46,4 +40,4 @@
     border-radius: 10px;
     overflow: hidden;
     border: 2px solid #003D29;
-  } */
+  }
