--- a/src/components/deliveries/deliveriesPage.css
+++ b/src/components/deliveries/deliveriesPage.css
@@ -5,9 +5,7 @@
     justify-content: center;
   }
 
-
-
-  .deliveries-product-container {
+  .deliveries-page-product-container {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -19,59 +17,59 @@
     overflow: hidden;
   }
 
-  .deliveries-image-gallery {
+  .deliveries-page-image-gallery {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
   }
 
-  .deliveries-main-image img {
+  .deliveries-page-main-image img {
     width: 100%;
     height: auto;
   }
 
-  .deliveries-thumbnail-images {
+  .deliveries-page-thumbnail-images {
     display: flex;
     gap: 10px;
   }
 
-  .deliveries-thumbnail-images img {
+  .deliveries-page-thumbnail-images img {
     width: 80px;
     height: 80px;
   }
 
-  .deliveries-product-details {
+  .deliveries-page-product-details {
     padding: 20px;
   }
 
-  .deliveries-product-name {
+  .deliveries-page-product-name {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 5px;
   }
 
-  .deliveries-product-brand {
+  .deliveries-page-product-brand {
     font-size: 18px;
     margin-bottom: 10px;
   }
 
-  .deliveries-quantity-setting {
+  .deliveries-page-quantity-setting {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
   }
 
-  .deliveries-quantity-setting h3 {
+  .deliveries-page-quantity-setting h3 {
     margin-right: 10px;
   }
 
-  .deliveries-add-or-reduce-quantity {
+  .deliveries-page-add-or-reduce-quantity {
     display: flex;
     align-items: center;
   }
 
-  .deliveries-add-or-reduce-quantity button {
+  .deliveries-page-add-or-reduce-quantity button {
     font-size: 18px;
     padding: 5px 10px;
     border: 1px solid #ccc;
@@ -79,18 +77,18 @@
     cursor: pointer;
   }
 
-  .deliveries-add-or-reduce-quantity h5 {
+  .deliveries-page-add-or-reduce-quantity h5 {
     margin: 0 10px;
     font-size: 18px;
   }
 
-  .deliveries-product-price {
+  .deliveries-page-product-price {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
   }
 
-  .deliveries-details-toggle {
+  .deliveries-page-details-toggle {
     background-color: #003d29;
     color: #fff;
     font-size: 16px;
@@ -101,24 +99,24 @@
     margin-bottom: 20px;
   }
 
-  .deliveries-product-description {
+  .deliveries-page-product-description {
     padding: 20px;
     border-top: 1px solid #ccc;
   }
 
-  .deliveries-description-heading {
+  .deliveries-page-description-heading {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
   }
 
-  .deliveries-product-description p {
+  .deliveries-page-product-description p {
     font-size: 16px;
   }
 
    /* Step Progress Widget */
 
- .deliveries-mainContainer {
+ .deliveries-page-mainContainer {
     flex: 1;
     width: 100%;
     max-width: 40%;
@@ -130,14 +128,14 @@
     overflow: hidden;
 }
 
-.deliveries-step-container {
+.deliveries-page-step-container {
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
     position: relative;
 }
 
-.deliveries-step-container::before{
+.deliveries-page-step-container::before{
     content: '';
     position: absolute;
     background: #F5F6F6;
@@ -148,7 +146,7 @@
     left: 0;
 }
 
-.deliveries-step-container::after{
+.deliveries-page-step-container::after{
     content: '';
     position: absolute;
     background: #003d29;
@@ -160,12 +158,12 @@
     left: 0;
 }
 
-  .deliveries-step-wrapper {
+  .deliveries-page-step-wrapper {
     position: relative;
     z-index: 1;
   }
 
-  .deliveries-step-style {
+  .deliveries-page-step-style {
     width: 30px;
     height: 30px;
     background-color: #fff;
@@ -177,11 +175,11 @@
     transition: 0.4s ease;
   }
 
-  .deliveries-step-style.completed {
+  .deliveries-page-step-style.completed {
     border-color: #f0f0f0;
   }
 
-  .deliveries-step-count {
+  .deliveries-page-step-count {
     font-size: 19px;
     color: #003d29;
     @media (max-width: 600px) {
@@ -189,7 +187,7 @@
     }
   }
 
-  .deliveries-step-label-container {
+  .deliveries-page-step-label-container {
     position: absolute;
     top: 56px;
     left: 50%;
@@ -197,14 +195,14 @@
     border-bottom: 1px solid #ccc;
   }
 
-  .deliveries-step-label {
+  .deliveries-page-step-label {
     font-size: 19px;
     @media (max-width: 600px) {
         font-size: 16px;
     }
   }
 
-  .deliveries-checkmark {
+  .deliveries-page-checkmark {
     font-size: 26px;
     font-weight: 600;
     /* color: #003d29;
@@ -213,59 +211,59 @@
     transform: scaleX(-1) rotate(-46deg); */
   }
 
-  .deliveries-details {
+  .deliveries-page-details {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
   }
 
-  .deliveries-contact_details, .deliveries-shipping_details {
+  .deliveries-page-contact_details, .deliveries-page-shipping_details {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
 
-  .deliveries-form-group {
+  .deliveries-page-form-group {
     display: flex;
     flex-direction: column;
   }
 
-  .deliveries-form-group label {
+  .deliveries-page-form-group label {
     font-size: 16px;
     margin-bottom: 5px;
   }
 
-  .deliveries-form-group input {
+  .deliveries-page-form-group input {
     padding: 6px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
   }
 
-  .deliveries-form-group input[type="checkbox"] {
+  .deliveries-page-form-group input[type="checkbox"] {
     display: flex;
     position: absolute;
     margin-right: 5px;
   }
 
-  #deliveries-for-check-box {
+  #deliveries-page-for-check-box {
     margin-left: 20px;
   }
 
-  .deliveries-step-buttons-container {
+  .deliveries-page-step-buttons-container {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
   }
 
-  .deliveries-proceed-button,
-.deliveries-back-button {
+  .deliveries-page-proceed-button,
+.deliveries-page-back-button {
   flex: 1;
   margin-right: 10px;
 }
 
-  .deliveries-proceed-button {
+  .deliveries-page-proceed-button {
     background-color: #003d29;
     color: #fff;
     font-size: 18px;
@@ -275,17 +273,17 @@
     cursor: pointer;
   }
 
-  .deliveries-proceed-button:hover {
+  .deliveries-page-proceed-button:hover {
     background-color: #00271c;
   }
 
-  .deliveries-proceed-button:disabled {
+  .deliveries-page-proceed-button:disabled {
     background-color: #c0c0c0;
     cursor: not-allowed;
   }
 
 
-  .deliveries-back-button {
+  .deliveries-page-back-button {
     background-color: #003d29;
     color: #fff;
     font-size: 18px;
@@ -295,11 +293,11 @@
     cursor: pointer;
   }
 
-  .deliveries-back-button:hover {
+  .deliveries-page-back-button:hover {
     background-color: #00271c;
   }
 
-  .deliveries-back-button:disabled {
+  .deliveries-page-back-button:disabled {
     background-color: #c0c0c0;
     cursor: not-allowed;
   }
