Dashboard almost done

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -43,7 +43,7 @@ a{
   */
 
 
-  .section__padding{
+  /* .section__padding{
     padding: 4rem 4rem;
   }
 
@@ -97,4 +97,4 @@ a{
   }
 
 
-  
+   */
