--- a/src/pages/MyDashboard.css
+++ b/src/pages/MyDashboard.css
@@ -31,17 +31,21 @@
   margin-bottom: 15px;
 }
 
-.product-card h3 {
+.dashboard-product-name{
   margin: 0;
   font-size: 1.2rem;
   color: #333;
   margin-right: 50%;
+  font-weight: bold;
 }
 
-.product-card p {
+.dashboard-product-description {
   margin: 10px 0;
-  color: #777;
-  margin-right: 50%;
+  color: #000000;
+}
+
+.dshboard-product-price {
+  margin-right: 65%;
 }
 
 .product-card button {
@@ -51,7 +55,7 @@
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
-  margin-top: 20%;
+  margin-top: 11%;
   margin-left: 50%;
 
 }
@@ -67,3 +71,36 @@
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
   transform: translateY(-2px);
 }
+
+.dashboard-header-button, .dashboard-Categories-button {
+  background-color: #0d4c0e;
+  color: #fff;
+  border: none;
+  border-radius: 15px;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-top: 60px;
+  margin-left: 200px;
+  margin-right: 1px; 
+  margin-bottom: 50px;
+}
+
+.dashboard-header-button:hover, .dashboard-Categories-button:hover {
+  background-color: #f8f8f8;
+  color: #003d29;
+  border: 2px solid #003d29;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
