--- a/src/components/footer and header/navigation/NavBar.css
+++ b/src/components/footer and header/navigation/NavBar.css
@@ -17,7 +17,8 @@
     border-radius: 50%;
 }
 
-.nav-container-logo>span {
+.nav-container-logo>span>a {
+    color: black;
     margin-left: .5rem;
     font-weight: 600;
 }
@@ -37,7 +38,11 @@
     list-style: none;
 }
 
-.nav-container-navbar-menu>li:hover {
+.nav-container-navbar-menu a {
+    color: black;
+}
+
+.nav-container-navbar-menu>a:hover {
     color: #003d29;
     cursor: pointer;
 }
