--- a/src/pages/home/LandingPage.css
+++ b/src/pages/home/LandingPage.css
@@ -76,7 +76,7 @@
 
 .text{
     position: absolute; 
-    color: white; 
+    color: #003D29; 
     display: flex;
     flex-direction: column;
     align-items: flex-start; 
@@ -88,34 +88,30 @@
 .text h1 {
     font-size: 60px;
     margin-bottom: 10px;
-    margin-left: 50px
+    margin-left: 50px;
+    
 }
 
 .text p {
     font-size: 30px;
     margin-bottom: 10px;
-    margin-left: 50px
+    margin-left: 50px;
+    text-align: left;
+    width: 50%;
 
   }
 
-  .explore-button{
+  .text button {
     background-color: #003D29;
-    color: #fff;
-    padding: 20px 70px;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    margin-top: 70vh; 
-    margin-left: 50px; 
-  }
-
-  .explore-button:hover {
-    background-color: #00281c; 
-  }
-  
-  .explore-button:focus {
-    outline: none; 
-    box-shadow: 0 0 5px #003D29; 
+      color: #fff;
+      padding: 20px 70px;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+      margin-bottom: 10px; 
+      margin-left: 30px;
+      
+     
   }
 
 .image-box {
@@ -139,20 +135,8 @@ h1 {
   height: auto;
 }
 
-.image-box button {
-  background-color: #003D29;
-    color: #fff;
-    padding: 10px 30px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-bottom: 10vh; 
-    margin-top: 10vh; 
-    display: inline-block;
-}
 
-  
+
 .top-categories{
   padding: 50px;
   display: flex;
