--- a/src/pages/MyDashboard.css
+++ b/src/pages/MyDashboard.css
@@ -111,7 +111,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: #fbf0e4;
-  border-radius: 4%;
+  border-radius: 20px;
   margin-left: 6%;
   margin-right: 6%;
   margin-bottom: 2%;
