--- a/src/pages/MyDashboard.css
+++ b/src/pages/MyDashboard.css
@@ -81,7 +81,7 @@
   padding: 10px 20px;
   cursor: pointer;
   margin-top: 60px;
-  margin-left: 200px;
+  margin-left: 20%;
   margin-right: 1px; 
   margin-bottom: 0px;
 }
