--- a/src/pages/home/LandingPage.css
+++ b/src/pages/home/LandingPage.css
@@ -57,6 +57,7 @@
  
   .image-container {
     background-image: url("background-img.jpg");
+    opacity: 85%;
     background-color: #cccccc;
     color: #fff;
     width: 100%;
@@ -76,19 +77,24 @@
 
 .text{
     position: absolute; 
-    color: #003D29; 
+    background: #fbf0e4;
+    opacity: 60%;
     display: flex;
     flex-direction: column;
     align-items: flex-start; 
     height: 100%;
     top: 300px; 
-
+    border-radius: 10px 0px;
 }
+
+
 
 .text h1 {
     font-size: 60px;
     margin-bottom: 10px;
     margin-left: 50px;
+    color: #003D29;
+    font-weight: 600;
     
 }
 
@@ -98,7 +104,8 @@
     margin-left: 50px;
     text-align: left;
     width: 50%;
-
+    color: #003D29;
+    font-weight: 500;
   }
 
   .text button {
